Make it compile, generally refactor code
Fix lots of bugs, use IPS instead of UKMM, add texts, redo linking and use of BotW functions and data
Signed-off-by: Makonede <61922615+Makonede@users.noreply.github.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,10 @@
 	url = https://github.com/open-ead/nnheaders
 [submodule "ukmm/ukmm"]
 	path = ukmm/ukmm
-	url = https://github.com/NiceneNerd/ukmm.git
+	url = https://github.com/NiceneNerd/ukmm
+[submodule "tools/botw-link"]
+	path = tools/botw-link
+	url = https://github.com/Makonede/botw-link
+[submodule "lib/botw"]
+	path = lib/botw
+	url = https://github.com/Makonede/botw
