--- a/config/app.json
+++ b/config/app.json
@@ -1,5 +1,5 @@
 {
-	"name":	"Application",
+	"name":	"Link Cannon",
 	"title_id":	"0x01007ef00011e000",
 	"title_id_range_min":	"0x0100000000010000",
 	"title_id_range_max":	"0x01ffffffffffffff",
