--- a/config.toml
+++ b/config.toml
@@ -20,4 +20,4 @@ output = "config/symbols.ld"
 elf = "build/linkcannon.elf"
 nso = "build/linkcannon.nso"
 make_args = ["-j8", "-C", "build", "-f", "../Makefile"]
-ignored_symbols = [".text", ".data", "__register_frame_info", "__deregister_frame_info", "linkcannon_init", "linkcannon_fini"]
+ignored_symbols = [".text", ".data", ".bss", "__register_frame_info", "__deregister_frame_info", "linkcannon_init", "linkcannon_fini"]
