Use BPS instead of IPS for patching
Patch EventInfo.product.sbyml, fix button combination image, fix .gitignore

Signed-off-by: Makonede <61922615+Makonede@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-.vs/
-.vscode/
-build/
-release/
-dump/
-patched/
-config/160.yaml
-config/symbols.ld
+**/.vs/
+**/.vscode/
+/build/
+/release/
+/dump/
+/patched/
+/config/160.yaml
+/config/symbols.ld
+**/*.bak
