--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@
 
 linker_config_dir = "config"
 output = "config/symbols.ld"
-elf = "build/linkcannon.elf"
-nso = "build/linkcannon.nso"
+elf = "build/LinkCannon.elf"
+nso = "build/LinkCannon.nso"
 make_args = ["-j8", "-C", "build", "-f", "../Makefile"]
 ignored_symbols = [".text", ".data", ".bss", "__register_frame_info", "__deregister_frame_info", "linkcannon_init", "linkcannon_fini"]
