--- a/config/botw-link.toml
+++ b/config/botw-link.toml
@@ -1,4 +1,4 @@
-# config.toml - botw-link configuration file.
+# botw-link.toml - botw-link configuration file.
 # Copyright (C) 2023  Makonede
 #
 # This program is free software: you can redistribute it and/or modify
