Make utility function to start threads
Use std namespace aligned_alloc and free and implicitly unsign chars

Define _GNU_SOURCE and _GLIBCXX_HAVE_ALIGNED_ALLOC in G++ options

Constexprify Yield, flatten ESLint configuration

Signed-off-by: Mako <61922615+Makonede@users.noreply.github.com>

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "format": "FORCE_COLOR=1 prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@eslint/js": "^8.51.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
@@ -21,6 +22,7 @@
     "@tauri-apps/cli": "^1.5.4",
     "@types/eslint": "^8.44.2",
     "@types/eslint-config-prettier": "^6.11.0",
+    "@types/eslint__js": "^8.42.2",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -29,11 +31,13 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "globals": "^13.23.0",
     "postcss": "^8.4.30",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "svelte-eslint-parser": "^0.33.1",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "turbo": "latest",
