--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
+    "bun-types": "^1.0.7",
     "esbuild": "^0.19.5",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
